src/objects/MUSW_License2__c.object
<CustomObject>
    <description>Authorization for a person or facility to perform a function for a period of time: business, profession or privilege</description>
	<fields>
        <fullName>Application_Method__c</fullName>
        <description>This refers to the application method being applied for- General Application, Examination, etc.</description>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This refers to the application type being applied for: Application Types- Trades Credential, Plan Review, Permit To Operate, etc.</description>
        <label>Program Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <description>This is being used instead of MUSW__Type__c as MUSW__Type__c is a managed field and cannot be changed to be dependent on a global picklist. This refers to the credential type being applied for</description>
        <label>License Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date when the license is effective to</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <description>Date when license was issued</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <description>Date when the license was renewed</description>
        <inlineHelpText>Date License was renewed or extended</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Current status of the license record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Delinquent</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Primary descriptor of the License.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Liquor</fullName>
                </value>
                <value>
                    <fullName>Animal</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LightningLicense</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LightningLicenses</pluralLabel>
	<recordTypes>
        <fullName>Unlicensed</fullName>
        <active>true</active>
        <description>For unlicensed business or professional</description>
        <label>Unlicensed</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>